--- a/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
@@ -26,8 +26,19 @@
     <button class="btn-itme" :disabled="getBtnShow('refresh_data')" id="refresh" @click="refreshData">刷新</button>
   </div>
   <div class="table-box">
-    <el-table ref="thequalityPlanTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:1640px;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
-    :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
+    <el-table 
+    ref="thequalityPlanTable" 
+    :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" 
+    :data="tableData" 
+    style="width:1640px;" 
+    :cell-style="cellStyle" 
+    row-key="id" 
+    :border="true" 
+    :height="tableHeight" 
+    default-expand-all
+    :row-class-name="tableRowClassName"
+    :tree-props="{ children: 'children', hasChildren: 'hasChildren' }"
+    >
     <el-table-column type="select" width="40" align="center">
       <template slot="header" slot-scope="scope">
         <el-checkbox @change="handleCheckAllChange" v-model="allChecked"></el-checkbox>
@@ -38,7 +49,7 @@
     </el-table-column>
     <el-table-column type="index" label="序号" width="60" align="center">
     </el-table-column>
-    <el-table-column v-if="getFieldShow('text')" prop="task_name" label="WBS任务名称"></el-table-column>
+    <el-table-column v-if="getFieldShow('text')" prop="text" label="WBS任务名称"></el-table-column>
     <el-table-column v-if="getFieldShow('wbs')" prop="wbs" label="任务代码" width="100" ></el-table-column>
     
     <el-table-column v-if="getFieldShow('duration')" label="工时" width="120">
