--- a/质量计划设置页面自定义控件/无权限版/quality_plan_1.3/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/无权限版/quality_plan_1.3/html/quality_plan.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body> -->
+<body>
 <div id="qualityPlanApp">
   <div class="btn-lsit">
     <button class="btn-itme" id="setBtn4" @click="SetRole">
@@ -172,11 +172,11 @@
   </div>
 
 </div>
-<!-- <script src="../js/lodash.js"></script>
+<script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
 
-</html> -->
+</html>
