edit qp cache\ fix ccPermission bug

--- a/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
@@ -23,7 +23,7 @@
     <button class="btn-itme" :disabled="getBtnShow('set_duration_time')"  @click="SetDurationTime">
       设置持续时间
     </button>
-    <button class="btn-itme" :disabled="getBtnShow('refresh_data')" id="refresh" @click="refreshData">刷新</button>
+    <!-- <button class="btn-itme" :disabled="getBtnShow('refresh_data')" id="refresh" @click="refreshData">刷新</button> -->
   </div>
   <div class="table-box">
     <el-table 
