--- a/自定义控件权限管理/custom_control_permission_management/html/custom_control_permission_management.html
+++ b/自定义控件权限管理/custom_control_permission_management/html/custom_control_permission_management.html
@@ -17,10 +17,10 @@
       <el-tab-pane label="功能权限" name="first">
         <div class="tab-content">
           <div class="first-tree-box">
-            <div class="search-box">
+            <!-- <div class="search-box">
               <i class="el-icon-search"></i>
               <input placeholder="请搜索业务对象" class="search-input" v-model="searchText">
-            </div>
+            </div> -->
             <div class="tree-box">
               <el-tree
                 :data="defaultTreeData"
@@ -41,8 +41,8 @@
             </button>
           </div>
           <div class="first-tree-box">
-            <div class="search-box empty-box">
-            </div>
+            <!-- <div class="search-box empty-box">
+            </div> -->
             <div class="tree-box">
               <el-tree
                 highlight-current="true"
@@ -61,8 +61,8 @@
       <el-tab-pane label="字段权限" name="second">
         <div class="tab-content field-content">
           <div class="first-tree-box">
-            <div class="search-box empty-box">
-            </div>
+            <!-- <div class="search-box empty-box">
+            </div> -->
             <div class="tree-box">
               <el-tree
                 highlight-current="true"
@@ -129,8 +129,8 @@
       <el-tab-pane label="数据规则" name="third">
         <div class="tab-content field-content data-rule-content">
           <div class="first-tree-box">
-            <div class="search-box empty-box">
-            </div>
+            <!-- <div class="search-box empty-box">
+            </div> -->
             <div class="tree-box">
               <el-tree
                 highlight-current="true"
