--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <body lang="en">
 
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <title>Document</title>
-  </head> -->
+  </head>
 <div id="resourceAllocationApp">
   <div class="btn-lsit">
     <button class="btn-itme" @click="SetRole">
@@ -31,9 +31,9 @@
     </button>
   </div>
   <div class="table-box">
-    <el-table ref="resourceAllocationTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
+    <el-table highlight-current-row ref="resourceAllocationTable" :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
     :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
-      <el-table-column width="40" type="select">
+      <el-table-column width="40" type="select" align="center">
         <template slot="header" slot-scope="scope">
           <el-checkbox @change="handleCheckAllChange" v-model="allChecked"></el-checkbox>
         </template>
@@ -43,7 +43,7 @@
       </el-table-column>
       <el-table-column type="index" label="序号" width="60" align="center">
       </el-table-column>
-      <el-table-column prop="task_name" label="WBS任务名称" width="220"></el-table-column>
+      <el-table-column prop="task_name" label="WBS任务名称" ></el-table-column>
       <el-table-column prop="wbs" label="任务代码" width="100"></el-table-column>
       <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
       <el-table-column label="工时" width="80">
@@ -241,11 +241,11 @@
   </div>
 
 </div>
-<!-- <script src="../js/lodash.js"></script>
+<script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
 
-</body> -->
+</body>
