--- a/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body> -->
+<body>
 <!-- <div id="qualityPlanApp"
 v-loading="loading"
   :element-loading-text="loading_text"
@@ -39,9 +39,10 @@ v-loading="loading"
   <div class="table-box" >
     <el-table 
     ref="thequalityPlanTable" 
-    :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" 
+    highlight-current-row
+    :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" 
     :data="tableData" 
-    style="width:1640px;" 
+    style="width:100%;" 
     :cell-style="cellStyle" 
     row-key="id" 
     :border="true" 
@@ -61,7 +62,7 @@ v-loading="loading"
     <el-table-column type="index" label="序号" width="60" align="center">
     </el-table-column>
     <el-table-column v-if="getFieldShow('text')" prop="text" label="WBS任务名称"></el-table-column>
-    <el-table-column v-if="getFieldShow('wbs')" prop="wbs" label="任务代码" width="100" ></el-table-column>
+    <el-table-column v-if="getFieldShow('wbs')" prop="wbs" label="任务代码" width="140" ></el-table-column>
     
     <el-table-column v-if="getFieldShow('duration')" label="工时" width="120">
       <template slot-scope="scope">
@@ -70,14 +71,14 @@ v-loading="loading"
         </div>
       </template>
     </el-table-column>
-    <el-table-column v-if="getFieldShow('start_date')" label="开始时间" width="180">
+    <el-table-column v-if="getFieldShow('start_date')" label="开始时间" width="200">
       <template slot-scope="scope">
         <div>
           ${ scope.row.start_date }
         </div>
       </template>
     </el-table-column>
-    <el-table-column v-if="getFieldShow('end_date')" label="结束时间" width="180">
+    <el-table-column v-if="getFieldShow('end_date')" label="结束时间" width="200">
       <template slot-scope="scope">
         <div>
           ${ scope.row.end_date }
@@ -194,11 +195,11 @@ v-loading="loading"
   </div>
 
 </div>
-<!-- <script src="../js/lodash.js"></script>
+<script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
 
-</html> -->
+</html>
