--- a/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/html/quality_plan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
 <!-- <div id="qualityPlanApp"
 v-loading="loading"
   :element-loading-text="loading_text"
@@ -195,11 +195,11 @@ v-loading="loading"
   </div>
 
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
 
-</html>
+</html> -->
