--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
@@ -49,7 +49,7 @@
       <el-table-column label="开始时间" width="160">
         <template slot-scope="scope">
           <div>
-            ${ scope.row.plan_starttime }
+            ${ scope.row.base_plan_starttime }
           </div>
           <!-- <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
             ${ scope.row.plan_starttime }
@@ -67,7 +67,7 @@
             ${ scope.row.plan_endtime }
           </div> -->
           <div>
-            ${ scope.row.plan_endtime }
+            ${ scope.row.base_plan_endtime }
           </div>
           <!-- <div class="type-one" v-show="scope.row.task_type==='1'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
