--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
@@ -13,18 +13,18 @@
   </head> -->
 <div id="resourceAllocationApp">
   <div class="btn-lsit">
-    <button class="btn-itme" @click="SetRole">
+    <button class="btn-itme" :disabled="getBtnShow('set_role')" @click="SetRole">
       设置角色
     </button>
-    <button class="btn-itme" @click="SetDurationTime">
+    <button class="btn-itme" :disabled="getBtnShow('set_duration_time')" @click="SetDurationTime">
       设置持续时间
     </button>
-    <button class="btn-itme" @click="goAllocation">
+    <button class="btn-itme" :disabled="getBtnShow('go_allocation')" @click="goAllocation">
       资源调配
     </button>
   </div>
   <div class="table-box">
-    <el-table highlight-current-row ref="resourceAllocationTable" :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;" :cell-style="cellStyle" row-key="id" :border="true" :height="tableHeight" default-expand-all
+    <el-table :row-class-name="tableRowClassName" highlight-current-row ref="resourceAllocationTable" :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;" :cell-style="cellStyle" row-key="id" :border="true" :height="tableHeight" default-expand-all
     :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
       <el-table-column width="40" type="select" align="center">
         <template slot="header" slot-scope="scope">
@@ -36,17 +36,17 @@
       </el-table-column>
       <el-table-column type="index" label="序号" width="60" align="center">
       </el-table-column>
-      <el-table-column prop="text" label="WBS任务名称" ></el-table-column>
-      <el-table-column prop="wbs" label="任务代码" width="100"></el-table-column>
-      <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
-      <el-table-column label="工时" width="80">
+      <el-table-column prop="text" v-if="getFieldShow('text')" label="WBS任务名称" ></el-table-column>
+      <el-table-column prop="wbs" v-if="getFieldShow('wbs')" label="任务代码" width="100"></el-table-column>
+      <el-table-column prop="quality_action" v-if="getFieldShow('quality_action')" label="纠偏措施" width="120"></el-table-column>
+      <el-table-column label="工时" v-if="getFieldShow('duration')" width="80">
         <template slot-scope="scope">
           <div>
             ${ scope.row.duration }
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="开始时间" width="160">
+      <el-table-column label="开始时间" v-if="getFieldShow('base_plan_starttime')" width="160">
         <template slot-scope="scope">
           <div>
             ${ scope.row.base_plan_starttime }
@@ -61,7 +61,7 @@
           </div> -->
         </template>
       </el-table-column>
-      <el-table-column label="结束时间" width="160">
+      <el-table-column label="结束时间" v-if="getFieldShow('base_plan_endtime')" width="160">
         <template slot-scope="scope">
           <!-- <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
             ${ scope.row.plan_endtime }
@@ -76,7 +76,7 @@
           </div> -->
         </template>
       </el-table-column>
-      <el-table-column label="资源开始时间" width="160">
+      <el-table-column label="资源开始时间" v-if="getFieldShow('res_plan_starttime')" width="160">
         <template slot-scope="scope">
           <div class="type-one" v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
@@ -85,7 +85,7 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="资源结束时间" width="160">
+      <el-table-column label="资源结束时间" v-if="getFieldShow('res_plan_endtime')" width="160">
         <template slot-scope="scope">
           <div class="type-one" v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
@@ -119,7 +119,7 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="持续时间" width="100">
+      <el-table-column label="持续时间" v-if="getFieldShow('duration_time')" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
             ${ scope.row.subArray[scope.row.subArray.length-1].first_duration }
@@ -143,7 +143,7 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="承担人角色" width="100">
+      <el-table-column label="承担人角色" v-if="getFieldShow('owner_role')" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
             ${ scope.row.subArray[scope.row.subArray.length-1].owner_role }
@@ -170,7 +170,7 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="承担人名称" width="100">
+      <el-table-column label="承担人名称" v-if="getFieldShow('owner')" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
             <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[scope.row.subArray.length-1].owner }</span>
@@ -203,7 +203,7 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="承担人技能" width="120">
+      <el-table-column label="承担人技能" v-if="getFieldShow('skill')" width="120">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
             ${ scope.row.subArray[scope.row.subArray.length-1].skill }
